--- a/KGERP/Views/BillRequisition/ITHeadBRRejectSlave.cshtml
+++ b/KGERP/Views/BillRequisition/ITHeadBRRejectSlave.cshtml
@@ -63,7 +63,7 @@
 
                                             <th>Status</th>
                                             <th>:</th>
-                                            <td >@Model.StatusName</td>
+                                            <td ><span class="label label-danger">@Model.StatusName</span></td>
                                         </tr>
                                         <tr>
                                             <th>Requisition No</th>
